Align top on home and edit page, fix left column width on home

--- a/css/ani.css
+++ b/css/ani.css
@@ -19,4 +19,5 @@ body {
 	padding: 5px;
 }
 
-.accordion a { cursor: pointer; }
+/* Put items at top of table cell */
+td.vtop {vertical-align:top}
